030-software/fluxcd/apps/deemix/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deemix
  labels:
    app: deemix
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deemix
  template:
    metadata:
      labels:
        app: deemix
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: deemix
          image: ghcr.io/bambanah/deemix:v4.6.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 6595
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 10m
              memory: 128M
            limits:
              cpu: 100m
              memory: 256M
      volumes:
        - name: run
          emptyDir: {}
        - name: config
          emptyDir: {}
          # persistentVolumeClaim:
          #   claimName: config
        - name: downloads
          emptyDir: {}
          # nfs:
          #   server: nfs-downloads.nfs-downloads.svc.cluster.local
          #   path: /deemix
      tolerations:
        - key: "node.kubernetes.io/nuc"
          operator: "Exists"
          effect: "NoSchedule"
