030-software/fluxcd/apps/deemix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deemix
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: deemix
  type: ClusterIP
