030-software/fluxcd/apps/deemix/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deemix
spec:
  hostnames:
    - deemix.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: deemix
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
